# picture

./: .gitignore  package.json  vite.config.mjs  vite.config.ts
src/: Main.svelte  app.ts  common.css  constants.ts  fileDropHandler.ts  imageTransform.ts  index.html  ipc.ts  path.ts  settings.ts  state.svelte.ts  types.d.ts  util.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/debian/: picture.desktop
src-tauri/src/: dialog.rs  image.rs  image_helper.rs  lib.rs  main.rs  menu.rs  util.rs
src-tauri/src/image/: channel.rs  colour.rs  common.rs  composite.rs  icon.rs  input.rs  metadata.rs  mod.rs  operation.rs  output.rs  pipeline.rs  resize.rs  stats.rs  util.rs
src-tauri/vips/: libvips.lib
src/assets/: ChangeSize.svelte  Clip.svelte  Delete.svelte  EditPic.svelte  Info.svelte  Loader.svelte  NotFound.svelte  OpenMenu.svelte  Pin.svelte  Pinned.svelte  Redo.svelte  Resize.svelte  RotateLeft.svelte  RotateRight.svelte  Save.svelte  SaveCopy.svelte  Shrink.svelte  Undo.svelte  icon.icns
src/edit/: Edit.svelte  Size.svelte  app.ts  appStateReducer.ts  edit.css  editStateReducer.ts  index.html
src/main/: History.svelte  Viewer.svelte  app.ts  appStateReducer.ts  index.html  main.css
src/view/: History.svelte  Viewer.svelte  view.css  viewStateReducer.ts
