[package]
name = "picture"
version = "0.1.0"
description = "picture"
authors = ["mrdkprj"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "~2.6.0", features = [] }

[dependencies]
tauri = { version = "~2.11.0", features = [ "devtools", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
wcpopup = { version ="0.9.5", features = ["webview"] }
zouni = { version = "0.2.2", features = ["webview2"] }
rs-vips = "0.7.0"
num-traits = "0.2"
num-derive = "0.4"
strum = "0.27"
strum_macros = "0.27"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "picture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

